Add usernames, video containers with labels, and fullscreen functionality

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,15 @@
 <div class="container">
   <header>
     <h1>Study Meet</h1>
+    <div class="username-section">
+      <input 
+        type="text" 
+        id="username-input" 
+        class="username-input" 
+        placeholder="Enter your name..." 
+        maxlength="20"
+      />
+    </div>
   </header>
 
   <div class="main-content">
